[project]
name = "distributedlock"
version = "0.0.1"
authors = [
  { name="Mark Linvill", email="mlinvill@purdue.edu" },
]
description = "A trivial distributed write lock implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src/distributedlock"}

[project.urls]
"Homepage" = "https://github.com/mlinvill/distributedlock"
"Bug Tracker" = "https://github.com/mlinvill/distributedlock/issues"

[build-system]
requires = ["hatchling", "click", "python-dotenv", "rich", "pysyncobj"]
build-backend = "hatchling.build"
